--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@ title: LGBTQIA Border Maker
         <meta name="theme-color" content="#3fbfbf"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
 
+        <link rel="icon" type="image/png" href="./favicon.png">
         <link rel="stylesheet" type="text/css" href="./assets/styles/main.css">
         <script type="text/javascript" src="./assets/scripts/index.js"></script>
     </head>
     <body>
         <div id="content">
-            <canvas id="avatar" class="circle"></canvas>
+            <canvas id="avatar" class="circle" width="0" height="0"></canvas>
             <div id="flag-name"></div>
             <div id="flags">
                 {% for flag in site.flags %}
